--- a/src/main/resources/editor.html
+++ b/src/main/resources/editor.html
@@ -1,7 +1,27 @@
 <!--编辑视图-->
-<div>
-    编辑视图
+<div class="borderBoxs">
+    <form class="form-horizontal">
+        <div class="form-group clearfix">
+            <label class="col-sm-3 control-label">左边内容:</label>
+            <div class="col-sm-9">
+                <span data-name="leftArticleSerial" class="article-content"></span>
+            </div>
+        </div>
 
+        <div class="form-group clearfix">
+            <label class="col-sm-5 control-label">首选项卡:</label>
+            <div class="col-sm-7">
+                <span data-name="rightArticleSerial" class="article-content"></span>
+            </div>
+        </div>
+
+        <div class="form-group clearfix">
+            <label class="col-sm-5 control-label">商城产品数据源:</label>
+            <div class="col-sm-7">
+                <span data-name="mallProductSerial" class="mallProduct-category"></span>
+            </div>
+        </div>
+    </form>
 </div>
 <!--/编辑视图-->
 
